refactor: add global exception handler and update services/controllers to use custom exceptions