@@ -2,6 +2,9 @@ package com.akilliotopark.service;
 
 import com.akilliotopark.dto.ParkingSpotRequest;
 import com.akilliotopark.entity.ParkingSpot;
+import com.akilliotopark.exception.BusinessValidationException;
+import com.akilliotopark.exception.ConflictException;
+import com.akilliotopark.exception.NotFoundException;
 import com.akilliotopark.mapper.ParkingSpotMapper;
 import com.akilliotopark.repository.ParkingSpotRepository;
 import lombok.RequiredArgsConstructor;
@@ -10,7 +13,6 @@ import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
 import java.util.Objects;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -19,8 +21,6 @@ public class ParkingSpotService {
     private final ParkingSpotRepository parkingSpotRepository;
     private final ParkingSpotMapper parkingSpotMapper;
 
-
-    /** Tüm park yerleri */
     public List<ParkingSpot> getAllSpots() {
         return parkingSpotRepository.findAll();
     }
@@ -28,51 +28,49 @@ public class ParkingSpotService {
     @Transactional
     public ParkingSpot saveSpot(ParkingSpotRequest request) {
         ParkingSpot spot = parkingSpotMapper.toEntity(request);
-
+        if (request.getOccupied() == null) {
+            throw new BusinessValidationException("Doluluk durumu belirtilmelidir.");
+        }
+        spot.setOccupied(request.getOccupied());
         validateSpot(spot);
         return parkingSpotRepository.save(spot);
     }
-
-    @Deprecated
-    public ParkingSpot createSpot(ParkingSpot spot) {
-        return parkingSpotRepository.save(spot);
-    }
-
     @Transactional
-    public ParkingSpot updateSpotStatus(String code, boolean occupied) {
-        ParkingSpot spot = parkingSpotRepository.findBySpotCode(code);
+    public ParkingSpot updateSpot(Long id, ParkingSpotRequest request) {
+        ParkingSpot existing = parkingSpotRepository.findById(id)
+                .orElseThrow(() -> new NotFoundException("Park alanı bulunamadı: " + id));
+        existing.setSpotCode(request.getSpotCode());
+        if (request.getOccupied() == null) {
+            throw new BusinessValidationException("Doluluk durumu belirtilmelidir.");
+        }
+        existing.setOccupied(request.getOccupied());
+        validateSpot(existing);
+        return parkingSpotRepository.save(existing);
+    }
+    @Transactional
+    public ParkingSpot updateSpotStatus(String spotCode, boolean occupied) {
+        ParkingSpot spot = parkingSpotRepository.findBySpotCode(spotCode);
         if (spot == null) {
-            throw new RuntimeException("Park yeri bulunamadı: " + code);
+            throw new NotFoundException("Park alanı bulunamadı: " + spotCode);
         }
         spot.setOccupied(occupied);
         return parkingSpotRepository.save(spot);
     }
-
     public List<ParkingSpot> getAvailableSpots() {
-        return parkingSpotRepository.findAll()
-                .stream()
-                .filter(s -> !Boolean.TRUE.equals(s.isOccupied()))
-                .collect(Collectors.toList());
+        return parkingSpotRepository.findAll().stream()
+                .filter(spot -> !spot.isOccupied())
+                .toList();
     }
-
-    public ParkingSpot getByCode(String code) {
-        ParkingSpot spot = parkingSpotRepository.findBySpotCode(code);
-        if (spot == null) {
-            throw new RuntimeException("Park yeri bulunamadı: " + code);
-        }
-        return spot;
-    }
-
     private void validateSpot(ParkingSpot spot) {
         if (spot == null) {
-            throw new IllegalArgumentException("ParkingSpot nesnesi null olamaz.");
+            throw new BusinessValidationException("ParkingSpot nesnesi null olamaz.");
         }
         if (spot.getSpotCode() == null || spot.getSpotCode().isBlank()) {
-            throw new IllegalArgumentException("spotCode boş olamaz.");
+            throw new BusinessValidationException("spotCode boş olamaz.");
         }
         ParkingSpot existing = parkingSpotRepository.findBySpotCode(spot.getSpotCode());
         if (existing != null && !Objects.equals(existing.getId(), spot.getId())) {
-            throw new IllegalStateException("Bu spotCode zaten kullanımda: " + spot.getSpotCode());
+            throw new ConflictException("Bu spotCode zaten kullanımda: " + spot.getSpotCode());
         }
     }
 }
